# graphql_ppx

./: .gitignore  .merlin  .npmignore  .travis.yml  CHANGELOG.md  DEVELOPING.md  LICENSE  Makefile  README.md  _tags  appveyor.yml  azure-pipelines.yml  bsconfig.json  convertSchema.js  copyPlatformBinaryInPlace.js  dune  dune-project  dune-workspace.dev  dune-workspace.dev-bs  dune-workspace.dev-native  esy.json  esyi.lock.json  graphql_ppx.install  graphql_ppx.opam  graphql_ppx_base.opam  graphql_schema.json  jbuild  opam  package.json  pokedex_schema.json  refresh-switches.sh  schema.gql  sendIntrospectionQuery.js
ci/: azure_run.sh  before_script_linux.sh  before_script_osx.sh  build_script_linux.sh  build_script_osx.sh  download_binaries.sh  travis_before_install.sh  wait_for_builds.sh
discover/: discover.ml  dune
esy.lock/: index.json
lib/: .merlin  ast.ml  document.ml  gql_lexer.ml  gql_parser.ml  gql_printer.ml  graphql_ppx.ml  sourcePos.ml  source_pos.ml  unifier.ml  value.ml
src/: .merlin  ast_serializer_apollo.ml  compat.ml  dirty_checker.ml  document.ml  dune  generator_utils.ml  gql_parser.ml  gql_printer.ml  graphql_ast.ml  graphql_lexer.ml  graphql_parser.ml  graphql_parser_document.ml  graphql_parser_value.ml  graphql_ppx.ml  graphql_ppx_base.ml  graphql_ppx_bucklescript.ml  graphql_ppx_native.ml  graphql_printer.ml  jbuild  js_serializer.ml  log.ml  option.ml  output.ml  output_bucklescript_decoder.ml  output_bucklescript_encoder.ml  output_bucklescript_module.ml  output_native_module.ml  read_schema.ml  result_decoder.ml  result_ext.ml  result_structure.ml  rule_known_argument_names.ml  rule_no_unused_variables.ml  schema.ml  source_pos.ml  standalone_type_decoder.ml  traversal_utils.ml  type_utils.ml  unifier.ml  (+2 more)
src/base/: ast_serializer_apollo.ml  build_config.cppo.ml  dirty_checker.ml  dune  generator_utils.ml  graphql_ast.ml  graphql_lexer.ml  graphql_parser_document.ml  graphql_parser_value.ml  graphql_printer.ml  multi_visitor.ml  ppx_config.ml  read_schema.ml  rule_no_unused_variables.ml  source_pos.ml  traversal_utils.ml
src/bucklescript/: dune  graphql_ppx.ml  output_bucklescript_decoder.ml  output_bucklescript_encoder.ml  output_bucklescript_unifier.ml  output_bucklescript_utils.ml
src/native/: dune  graphql_ppx.ml  output_native_decoder.ml  output_native_encoder.ml  output_native_module.ml  output_native_unifier.ml
tests/: .merlin  bsconfig.json  graphql_schema.json  schema.gql  test.ml
tests_apollo/: bsconfig.json
tests_bucklescript/: bsconfig.json
tests_native/: arg_named_query.ml  comment.ml  custom_decoder.ml  custom_scalars.ml  dune  enum_input.ml  fragment_definition.ml  interface.ml  lists.ml  (+17 more)
(+99 files in other folders)
